--- a/src/baseComponents/Main.css
+++ b/src/baseComponents/Main.css
@@ -1,41 +1,56 @@
 #main{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    width:100%;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
     background-color: dimgray;
     border: 5px solid lightgray;
     padding: 2em;
+    
 }
 #green{
-    grid-row: 1/2;
-    grid-column: 1/2;
+    grid-row: 1/11;
+    grid-column: 1/11;
     border-top-left-radius: 100%;
     border-top-right-radius: 7%;
     border-bottom-left-radius: 7%;
     border: 10px solid rgb(0, 0, 0);
 }
 #red{
-    grid-row: 1/2;
-    grid-column: 2/3;
+    grid-row: 1/11;
+    grid-column: 11/21;
     border-top-right-radius: 100%;
     border-top-left-radius: 7%;
     border-bottom-right-radius: 7%;
     border: 10px solid rgb(0, 0, 0);
 }
 #yellow{
-    grid-row: 2/3;
-    grid-column: 1/2;
+    grid-row: 11/21;
+    grid-column: 1/11;
     border-bottom-left-radius: 100%;
     border-top-left-radius: 7%;
     border-bottom-right-radius: 7%;
     border: 10px solid rgb(0, 0, 0);
 }
 #blue{
-    grid-row:2/3;
-    grid-column: 2/3;
+    grid-row:11/21;
+    grid-column: 11/21;
     background-color: dodgerblue;
     border-bottom-right-radius: 100%;
     border-top-right-radius: 7%;
     border-bottom-left-radius: 7%;
     border: 10px solid rgb(0, 0, 0);
+}
+#playButton{
+    color:rgb(240, 248, 255);
+    background-color: black;
+    grid-row: 6/16;
+    grid-column: 6/16;
+    border: 10px solid black;
+    border-radius: 100%;
+
+}
+#playButton > h2 {
+    margin-top: 50%;
+    margin-bottom:50%;
 }
